--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "busboy": "^1.6.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.4",
     "sass": "^1.62.0",
     "vuetify": "^3.1.3"
